<resources>
    <string name="abou">About</string>
    <string name="account_locked">Your account locked. Please try later</string>
    <string name="account_status">Account status</string>
    <string name="accout_delete">Your account was deleted!</string>
    <string name="active_acc">Account Active</string>
    <string name="add_your_comment">Add your comment</string>
    <string name="add_your_picture">Add your picture</string>
    <string name="address">Address</string>
    <string name="address_ll_hic">Address</string>
    <string name="ago">- %d minutes ago</string>
    <string name="alert_order" formatted="false">%s will notify you when they are on the way Please note that Umber will charge you %s for the cancellation fee if you click <b>Cancel order</b> once our expert has arrived to your place.</string>
    <string name="already_active">Your account active!</string>
    <string name="app_id">650769278430011</string>
    <string name="app_name">UmberPro</string>
    <string name="are_you_sure_you_want_to_decline">Are you sure you want to decline?</string>
    <string name="arrived_">Arrived</string>
    <string name="atm">ATM</string>
    <string name="auth_failt">Authentication failed. Please try again!</string>
    <string name="back">Back</string>
    <string name="become_ex">Become to Expert</string>
    <string name="birth">Birthday</string>
    <string name="book_now">BOOK NOW</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_order">Cancel order</string>
    <string name="cancel_order_title">CANCEL ORDER</string>
    <string name="cash">Cash</string>
    <string name="category">Category</string>
    <string name="cb_title_pri">I accept the <b>Terms and Conditions</b> of Umber</string>
    <string name="check_connect">Please check your connection then try again!</string>
    <string name="check_mail_mess">Please check your email inbox.</string>
    <string name="connected">Connected</string>
    <string name="cost">Cost:</string>
    <string name="cost_hour" formatted="false">Cost/Hour: %s%s</string>
    <string name="cost_hour_or_job">Cost/Hour or Job</string>
    <string name="cost_hours">Cost/Hour</string>
    <string name="created">Created</string>
    <string name="credit">Credit card</string>
    <string name="dang_xu_ly">Loading...</string>
    <string name="date">Date Order</string>
    <string name="decline">Decline</string>
    <string name="disconnect">Disconnect</string>
    <string name="distance">Distance</string>
    <string name="edt_email">Email</string>
    <string name="emaill_incorrectly">Your email is incorrect. Please try again!</string>
    <string name="enter_pass">"Please enter your password! "</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_promo_code_and_save_on_umber_fee">Enter your promo code and save on Umber fee.</string>
    <string name="error_status">Missing some information. Please try again later!</string>
    <string name="errror_time">Error time</string>
    <string name="estimated">Estimated</string>
    <string name="estimation_of_work">ESTIMATION OF WORK</string>
    <string name="ex_i_need_maid_to_clean">I need maid to clean...</string>
    <string name="exist_acc">Phone number or Email was exist. Please try again!</string>
    <string name="exist_auth">"Account couldn't found.
 Please sign up first!"</string>
    <string name="exist_email">Your email is Exist. Please try again!</string>
    <string name="exist_phone">Phone number is already exist. Please try again!</string>
    <string name="faq">FAQ</string>
    <string name="faster_sign_in_with">FASTER WITH SOCIAL MEDIA</string>
    <string name="finding">Finding</string>
    <string name="finish_">Finish</string>
    <string name="firstname">First name</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="from">From</string>
    <string name="full_image">Your pack is full, please remove some images...</string>
    <string name="full_name">Full name</string>
    <string name="gender">Gender</string>
    <string name="hey_which_expert_do_you_need">Hey, which expert do you need?</string>
    <string name="history">History</string>
    <string name="history_title">History</string>
    <string name="how_can_i_help_you">How can I help you</string>
    <string name="i_changed_my_mind">I changed my mind.</string>
    <string name="i_found_another_solution">I found another solution</string>
    <string name="i_made_a_wrong_booking">I made a wrong booking</string>
    <string name="images">Images:</string>
    <string name="info_ex">INFO EXPERT</string>
    <string name="info_order">INFO ORDER</string>
    <string name="inpatient">InPatient:</string>
    <string name="install_first">Please install your instagram application first.</string>
    <string name="job_done">Job done</string>
    <string name="job_done_format">Job done: %d</string>
    <string name="job_dones">Jobs Done</string>
    <string name="job_id">Job ID</string>
    <string name="job_was_declined">Your job was decline...</string>
    <string name="key_api_gplus">618537557316-agopcr0c39fthjjra7a0s6d37cho3kmd.apps.googleusercontent.com</string>
    <string name="km">km</string>
    <string name="language">Language</string>
    <string name="lastname">Last name</string>
    <string name="list_categories">List Categories</string>
    <string name="loadding">loading</string>
    <string name="lock_acc">Your account locked. Please contact Umber!</string>
    <string name="login">Sign In</string>
    <string name="login_success">Login Success!</string>
    <string name="logout">Logout</string>
    <string name="material_cost">Material Cost</string>
    <string name="missing_data">Some data still missing</string>
    <string name="my_account">My account</string>
    <string name="name">Name</string>
    <string name="nav_notification">Notification</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="new_password">New Password</string>
    <string name="no_check">Please check accept our Terms and Conditions</string>
    <string name="no_internet">No internet connection</string>
    <string name="non_exist_fb">Your account missing some information. Please update profile!</string>
    <string name="notification">Notification</string>
    <string name="ok">OK</string>
    <string name="on_way">On My Way</string>
    <string name="open_map">Open map</string>
    <string name="order_created">Order created</string>
    <string name="outpatient">OutPatient:</string>
    <string name="panic_buton">Find your nearest clinic, firefighter and police station.</string>
    <string name="pass_incorrectly">Password too short, enter minimum 6 characters!</string>
    <string name="password">Password</string>
    <string name="permission_message">Please allow Umber to access to your photo</string>
    <string name="phone">Phone:</string>
    <string name="pick_category">Pick Category</string>
    <string name="play_audio_file">Play audio file</string>
    <string name="please_enter_address">Please enter your address.</string>
    <string name="please_enter_email">"Please enter your email! "</string>
    <string name="please_enter_firstname">Please enter your first name</string>
    <string name="please_enter_gender">Please select your gender.</string>
    <string name="please_enter_last_name">Please enter your last name.</string>
    <string name="please_enter_phone">Your phone is invalid!</string>
    <string name="price">Price</string>
    <string name="promo">Promo</string>
    <string name="promotion">Promotion</string>
    <string name="read_all">READ ALL</string>
    <string name="recently">Recently</string>
    <string name="reconnect">Reconnecting...</string>
    <string name="ref">Reference</string>
    <string name="register">Next</string>
    <string name="remove">Remove</string>
    <string name="repass_incorrectly">Your passwords do not match</string>
    <string name="repassword">Repeat Password</string>
    <string name="resend">Resend</string>
    <string name="reset">Reset Password</string>
    <string name="right">Please allow Umber to access to your permission</string>
    <string name="save">SAVE</string>
    <string name="schedule">Schedule</string>
    <string name="sdt">Phone</string>
    <string name="search_category">Search here</string>
    <string name="select">Select</string>
    <string name="self_description">Self-Description:</string>
    <string name="sent_email">We have sent you instruction to reset your password!</string>
    <string name="server_declince">Server Decline</string>
    <string name="service_not_avalable">Google Play Services is not available.</string>
    <string name="setting">SETTING</string>
    <string name="share_fb">" I got a great service from Umber Expert. Highly recommend them with my friend here"</string>
    <string name="share_feedback">" I got a great service from Umber Expert. Highly recommend them with my friend here: https://umberus.com/"</string>
    <string name="share_with_us">Share with us</string>
    <string name="sign_in_with_email">SIgn in with email</string>
    <string name="sign_in_with_mobile">Sign in with mobile</string>
    <string name="signup">Sign up</string>
    <string name="sms">SMS</string>
    <string name="specialities">Specialities:</string>
    <string name="start">Start</string>
    <string name="start_record">Start Record</string>
    <string name="status">Status</string>
    <string name="stop_record">Stop Record</string>
    <string name="success">Successful</string>
    <string name="success_code">Success code</string>
    <string name="tags">Tags</string>
    <string name="take_picture">Take picture</string>
    <string name="tell_us_what_is_your_requirement">Tell us what your requirement is:</string>
    <string name="term_condition">TERMS AND CONDITIONS</string>
    <string name="thank_feedback">Thank you for using Umber!</string>
    <string name="the_expert_arrived_on_site_and_made_this_estimation">The Expert arrived on site and made this estimation</string>
    <string name="time">Time</string>
    <string name="time_changed">"Time changed : "</string>
    <string name="time_work_1">Time work</string>
    <string name="title_list_ex">Hey %s, here are the Experts who accepted your job!</string>
    <string name="title_order_confirm">YOUR ORDER CONFIRMED</string>
    <string name="title_rate">USER REVIEW</string>
    <string name="title_reg">SIGN UP FOR UMBER</string>
    <string name="to">to</string>
    <string name="total_cost">Total Cost</string>
    <string name="type_promotion_code_here">Promotion code</string>
    <string name="umber_android">Umber for Android</string>
    <string name="umber_connection_fee">Umber connection fee</string>
    <string name="umber_will_contact_you_soon_please_wait_for_expert_service_our_call_our_update_by_email_thank_you">"Umber will contact you soon 

Please wait for Expert Service ( our call / our update by email ) 

Thank you"</string>
    <string name="unable_access_google">Unable to access to google profile. Please try again later!</string>
    <string name="unable_connect_ex">Unable to connect to Expert</string>
    <string name="unable_to_get_address">Unable to get your address. Please try again!</string>
    <string name="unit_cost">Rp</string>
    <string name="unknow">Unknown</string>
    <string name="unknow_error">Error occurred while connecting. Please try again later!</string>
    <string name="unknow_error_upload">Error occurred while uploading. Some informations will be missed!</string>
    <string name="unsuccess_code">Invalid code</string>
    <string name="upcoming">Upcoming</string>
    <string name="wait_too_long">Wait too long</string>
</resources>