<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_android_contacts"
            android:title="@string/upcoming" />
        <item
            android:id="@+id/nv_history"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_promotion"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:title="@string/promotion"
            android:visible="false" />
        <item
            android:id="@+id/nav_notifi"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notification"
            app:actionViewClass="android.widget.ImageView" />
        <item
            android:id="@+id/nav_change"
            android:icon="@drawable/ic_swap_horiz_black_24dp"
            android:title="@string/become_ex" />
        <item
            android:id="@+id/nav_lang"
            android:icon="@drawable/ic_translate_black_24dp"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_error_black_24dp"
            android:title="@string/abou" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/logout" />
    </group>
</menu>