<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="left" android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/bg_dialog_confirm" android:padding="@dimen/margin_medium" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/text_large" android:textStyle="bold" android:textColor="@color/primary_text" android:gravity="center" android:layout_gravity="center"
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_medium" android:layout_marginBottom="@dimen/margin_medium" android:text="@string/cancel_order_title" />
    <View android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="0.5dip" />
    <TextView android:textSize="@dimen/text_medium" android:textStyle="normal" android:gravity="left" android:layout_gravity="left" android:id="@+id/tv_mess" android:paddingLeft="30.0dip" android:paddingRight="30.0dip" android:paddingBottom="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_large" android:text="@string/are_you_sure_you_want_to_decline" />
    <RadioGroup android:id="@+id/rad_group" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RadioButton
            android:checked="true" android:text="@string/wait_too_long" style="@style/StyleRadiobutton" />
        <RadioButton
            android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/i_changed_my_mind" />
        <RadioButton
            android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/i_found_another_solution" />
        <RadioButton
            android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/i_made_a_wrong_booking" />
    </RadioGroup>
    <LinearLayout android:orientation="vertical" android:padding="@dimen/margin_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_medium">
        <EditText android:gravity="top" android:layout_gravity="top" android:id="@+id/edt_cancle" android:background="@drawable/bg_edt_form" android:padding="@dimen/margin_small" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="Type your message" android:lines="6" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_large" android:layout_marginBottom="@dimen/margin_medium">
        <android.support.v7.widget.CardView android:gravity="center" android:id="@+id/ll_cancel" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_small" android:layout_marginRight="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_small" android:foreground="?android:selectableItemBackground" android:layout_weight="1.0" android:onClick="onClick" app:cardBackgroundColor="@color/white" app:cardCornerRadius="8.0dip" app:cardElevation="@dimen/elevation_card">
            <TextView android:textSize="@dimen/text_large" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center"
                android:padding="@dimen/margin_medium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/back" android:textAllCaps="true" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView android:gravity="center" android:id="@+id/ll_ok" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_small" android:layout_marginRight="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_small" android:foreground="?android:selectableItemBackground" android:layout_weight="1.0" android:onClick="onClick" app:cardBackgroundColor="@color/colorAccent" app:cardCornerRadius="8.0dip" app:cardElevation="@dimen/elevation_card">
            <TextView android:textSize="@dimen/text_large" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center"
                android:padding="@dimen/margin_medium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ok" android:textAllCaps="true" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>